--- a/src/pages/domestictax/domestictax.html
+++ b/src/pages/domestictax/domestictax.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>Domestic Tax</ion-title>
+    <ion-title>境内税讯</ion-title>
   </ion-navbar>
 </ion-header>
 
