--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -68,7 +68,7 @@
           <img src="assets/imgs/taxfree.png" height="300" width="500" (click)="presentAboutusModal('aboutus')"/>
           <ion-card-content>
             <ion-card-title>
-              About US
+              关于我们
             </ion-card-title>
             <p>
               The most popular industrial group ever, and largely
@@ -83,7 +83,7 @@
           <img src="assets/imgs/taxfree.png" height="300" width="500" (click)="presentAboutusModal('vision')"/>
           <ion-card-content>
             <ion-card-title>
-              Vision
+              企业视野
             </ion-card-title>
             <p>
               The most popular industrial group ever, and largely
@@ -98,7 +98,7 @@
           <img src="../../assets/imgs/TBD筹划方案.jpeg" height="300" width="500" />
           <ion-card-content>
             <ion-card-title>
-              TBD
+              待定
             </ion-card-title>
             <p>
               The most popular industrial group ever, and largely
@@ -112,7 +112,7 @@
     <ion-row>
       <ion-col>
         <ion-card>
-          <img src="../../assets/imgs/境内税讯.jpeg" height="300" width="500" (click)="navTo('nationaltax')"/>
+          <img src="../../assets/imgs/境内税讯.jpeg" height="300" width="500" (click)="navTo('domestictax')"/>
           <ion-card-content>
             <ion-card-title>
               境内税讯
@@ -127,7 +127,7 @@
       </ion-col>
       <ion-col>
         <ion-card>
-          <img src="assets/imgs/taxfree.png" (click)="navTo('domestictax')" height="300" width="500"/>
+          <img src="assets/imgs/taxfree.png" (click)="navTo('nationaltax')" height="300" width="500"/>
           <ion-card-content>
             <ion-card-title>
               境外税讯
