--- a/src/pages/nationaltax/nationaltax.html
+++ b/src/pages/nationaltax/nationaltax.html
@@ -1,69 +1,158 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>National Tax</ion-title>
+    <ion-title>境外税讯</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
   <ion-grid>
     <ion-row>
-      <ion-col>
+      <ion-col col-4>
         <ion-searchbar>
           title
         </ion-searchbar>
         <ion-list>
           <ion-item>
             <ion-thumbnail item-start>
-              <img src="img/thumbnail-totoro.png">
+              <img src="img/thumbnail-totoro.png"/>
             </ion-thumbnail>
-            <h2>My Neighbor Totoro</h2>
-            <p>Hayao Miyazaki • 1988</p>
+            <h2>欧盟-</h2>
+            <p>比利时税务政策的变动-截至2018年6月</p>
             <button ion-button clear item-end>View</button>
           </ion-item>
-        </ion-list>
-        <ion-list>
           <ion-item>
             <ion-thumbnail item-start>
-              <img src="img/thumbnail-totoro.png">
+              <img src="img/thumbnail-totoro.png"/>
             </ion-thumbnail>
-            <h2>My Neighbor Totoro</h2>
-            <p>Hayao Miyazaki • 1988</p>
+            <h2>Title</h2>
+            <p>Desc</p>
             <button ion-button clear item-end>View</button>
           </ion-item>
-        </ion-list>
-        <ion-list>
           <ion-item>
             <ion-thumbnail item-start>
-              <img src="img/thumbnail-totoro.png">
+              <img src="img/thumbnail-totoro.png"/>
             </ion-thumbnail>
-            <h2>My Neighbor Totoro</h2>
-            <p>Hayao Miyazaki • 1988</p>
+            <h2>Title</h2>
+            <p>Desc</p>
             <button ion-button clear item-end>View</button>
           </ion-item>
-        </ion-list>
-        <ion-list>
           <ion-item>
             <ion-thumbnail item-start>
-              <img src="img/thumbnail-totoro.png">
+              <img src="img/thumbnail-totoro.png"/>
             </ion-thumbnail>
-            <h2>My Neighbor Totoro</h2>
-            <p>Hayao Miyazaki • 1988</p>
+            <h2>Title</h2>
+            <p>Desc</p>
             <button ion-button clear item-end>View</button>
           </ion-item>
-        </ion-list>
-        <ion-list>
           <ion-item>
             <ion-thumbnail item-start>
-              <img src="img/thumbnail-totoro.png">
+              <img src="img/thumbnail-totoro.png"/>
             </ion-thumbnail>
-            <h2>My Neighbor Totoro</h2>
-            <p>Hayao Miyazaki • 1988</p>
+            <h2>Title</h2>
+            <p>Desc</p>
+            <button ion-button clear item-end>View</button>
+          </ion-item>
+          <ion-item>
+            <ion-thumbnail item-start>
+              <img src="img/thumbnail-totoro.png"/>
+            </ion-thumbnail>
+            <h2>Title</h2>
+            <p>Desc</p>
+            <button ion-button clear item-end>View</button>
+          </ion-item>
+          <ion-item>
+            <ion-thumbnail item-start>
+              <img src="img/thumbnail-totoro.png"/>
+            </ion-thumbnail>
+            <h2>Title</h2>
+            <p>Desc</p>
+            <button ion-button clear item-end>View</button>
+          </ion-item>
+          <ion-item>
+            <ion-thumbnail item-start>
+              <img src="img/thumbnail-totoro.png"/>
+            </ion-thumbnail>
+            <h2>Title</h2>
+            <p>Desc</p>
             <button ion-button clear item-end>View</button>
           </ion-item>
         </ion-list>
+
       </ion-col>
-      <ion-col>
-            hahahahahhahahahhahahahahahhahahhahahahahahhahahahah
+
+      <ion-col col-24>
+
+            <ion-card>
+              <ion-card-header>
+                欧盟-比利时税务政策的变动-截至2018年6月
+              </ion-card-header>
+              <ion-list>
+              <ion-card-content>
+                伴随着CRS第一年正式执行，2018注定是各国国际税务不平静的一年。国内的个税立法提案，美国税改(TCJA)的执行，澳大利亚对外国人资本利得税的改动，欧盟的反避税指示(ATAD)也对各成员国一一落实，作用在全欧盟范围内。ATAD包括四大规则：
+                CFC规则旨在打击利润转移至低税国;
+                双开关规则(switchover)旨在堵住双边不征税收入的漏洞，如境外股息从以前的作为海外收入不征税，现在改为依据入境前税务记录进行入境补征税；
+                转退税规则(exit taxation)旨在打击转移资产以避税的传统行为，如从前利用旧专利委托研发将新成果法律持有者转至低税国，现在改为旧专利在走出欧盟的第一阶段就进行前期征税；
+                利息限定规则旨在打击自放“高利贷”滥用利息抵扣，加设抵扣限制，超出部分不享受抵扣。
+                其中比利时受到的影响包括以下几点：
+                税务合并清缴，这样关联企业的税损可以被用来抵扣盈利企业应税总额，同时海外子公司也可以合并在该报表内。2019年1月1日起的财务年开始执行。
+                企业所得税从2018和2019年的29.5%将会在2020年1月1日期的财务年降至25%。
+                股息收入抵免从95%提高到100%，原最低0.412%的资本利得税被取消，比利时成为完全没有资本利得税的国家(CIG)。享受这两项优惠要先经过“参与抵免”的判定，必须同时满足如下三点，一所控子公司股本最低不低于10%或重组估值不低于250万欧元，二最少持有12个月，三符合资本利得税的归类判定。
+                这里要注意如持有期小于12个月，但其它两项满足，在2018和2019财务年以25.5%征收，2020后按25%。如持有期大于12个月，但另两项没有同时满足，在2018和2019财务年以29.85%征收，2020后按25%。
+                欧盟对ATAD下CFC规则给予成员国选择权，选择采用定位于“低税子公司的具体收入项”或“人为操纵(以支出)分配给子公司收入”。这样的选择仅对从非实质经营的CFC取得的收入进行限制，而并没有对低税子公司所有的消极收入作出限制，这样的过渡还算柔和，2019年1月1日起的财务年执行。
+                “开曼税”附加到比利时个人和非公司机构，此条款针的设计对境外信托和境外私人基金，对象不仅是信托或基金的法律建立人，还包含与其相关的第三方如向机构曾转移过资产、或享有经济收益的人如境外保单受益人。值得注意的是此条款不对比利时税务居民公司。比利时财务部长johan Van Overtveldt，在2018年3月接受比鲁塞尔时报采访时，曾表示过“特别税务调查组有太多的工作准备开展，在目前阶段尚未建立针对不申报境外持有行为的惩罚措施，但应该会建立罚金惩罚制度。”
+                同时值得注意的是外国人进入比利时进行短暂工作时，并不会被按照签证停留时间被自动认为非税务居民。比利时认定税务居民是从入境之日起有可以管理自己资产的居住地，而不存在“183天”的规定，因此客户在进入比利时取得收入后要注意自己所在国对税务居民的判定，防止在税务信息对接时产生不必要的税务责任。
+                另外文中一开始提到的2018年澳大利亚对外国人资本利得税的提案一旦通过(可能性>90%)，需要英语运营的投资集团，可以考虑将现澳集团母公司降级为比利时子公司级别，倒置受控于比利时另一母公司，合同上拆解管理并分配决策地任务以满足判定要求。
+                这样一来所有中间层架在比利时的企业依据自身经营需求，可能会做出相应的调整，对于受到实质经营影响的企业会旭辉考虑迁出比利时。迁出时要注意：1. 比利时队税务居民的判定按“实质”而非注册地或管理地，即时销税号但主要居住地仍在比利时，仍会该企业被判定为比利时税务局民。2. 倒置税务在欧盟的发展，个人认为虽不会在短期内通过议案表决迅速形成法律效应，但纵观国际背景，税务倒置结构已在美国通过决议(如s385)，在美方抗议欧盟地区地税国为美国企业留下税务倒置的后患背景下，2016年底卢森堡事件(Antoine Deltour“法国斯诺登”非法泄露财务文件，后被授予奖励增强欧盟凝聚力的欧洲市民奖)发生，这些相关因素个人认为会推动欧盟不得不对税务倒置进行着手解决，即使欧盟部分成员国是受益方。
+                在这样的环境下，比利时企业和其他各国已设立税务架构的公司和集团应抓住目前格局中各国的税务优势重新制定税务方案，以求以最低成本解决税务风险。
+                本公司以“高、精、尖”的团队特点为客户提供针对性更强、实用性更高的国际税务导航。同时为客户提供安全稳定的股权变更申请，资金出境备案，小语种翻译服务合全方位对接的境外税务落地服务。
+
+                https://uk.practicallaw.thomsonreuters.com/4-597-7846?transitionType=Default&contextData=(sc.Default)&firstPage=true&bhcp=1
+
+                5.1 主管为财政部+税务总署。
+
+                5.2 征税判定
+                全球所得，居民纳税人。建筑工程，油/气矿/井在本地开工第一天形成PE，服务类在本地提供咨询12月内超90天。
+
+                企业所得税豁免物业
+                海运，空运，依阿曼法律成立的投资基金和投资在马斯喀特证券市场，工业，矿采等。
+
+
+                Confidential copyright-Tony LIU税率
+                企业15%，个人所得0%。申报基础是自我评估制度，要求取得税务证，先经工商部许可，再申税号，会计账簿保存10年，经税务局批准可外汇记录。资本弱化债资比不超2:1。
+                2017受海合会影响税务近年会调，如增加消费税，加强关联交易披露，规范化转让定价等。
+                暂无成本分摊协议管理，暂无受控外国企业，暂无预约定价安排。
+
+                税前扣除
+                为了获取收入或以经营为目的所产生的支出，尤其包括：
+                商业用途的贷款利息，包括关联方，但要是依照行政法规在限制基础上的贷款；
+                直线折旧，不计算重新估值，其中知识产权按33%折旧；
+                企业发生的筹建费用可以3或5年摊销；
+                只有税务机构才有权认定坏账且无法收回的情况；
+                付给主席、股份有限公司董事会成员、全职管理其他公司的合伙人等此类支出视作企业成本；
+                因员工福利发生的任何金额（养老基金或由税务机构批准的此类供款，完全或仅为员工从本企业退休后提交养老金或其他类似福利的任何金额，或员工去世后为其家属提交养老金或其他类似福利所发生的任何金额）;
+                经营中外汇收益不纳税，损失也不扣除；
+                对已缴纳境外税可以抵免。
+
+                5.6 不能扣除(外企限制)
+                为外国总部发生的费用，给总部支付的利息(如证明贷款为给阿曼分公司独自使用，向银行借贷的利息可以扣除)；
+                给阿曼代理人的担保费最多只扣除应纳税收入的5%。
+
+                5.7 非居民企业支出
+                以withholding tax形式征收。暂非居民无定义，但遵循OECD，非阿曼注册，在境内没有PE，征税包括几乎所有interests, royalties, dividend, service, development and research fees, governance fees, IT  service taxed at 10%。
+                如果有双边税务协议，按协议tax rate来。
+
+                比利时和中国双边税收协议于2014年1月1日生效执行
+
+                https://www.ey.com/gl/en/services/tax/international-tax/alert--belgium-introduces-100-percent-participation-exemption
+              </ion-card-content>
+
+              </ion-list>
+            </ion-card>
+
+
+
+
+
       </ion-col>
     </ion-row>
   </ion-grid>
