--- a/src/pages/vision/vision.html
+++ b/src/pages/vision/vision.html
@@ -7,18 +7,33 @@
 <ion-content padding>
   <ion-card>
     <ion-card-header>
-      CHNITS's Vision
+      企业视野
     </ion-card-header>
-
     <ion-card-content>
-      <ion-card-title>
-        Vison
-      </ion-card-title>
+      <!--<ion-card-title>
+        企业视野
+      </ion-card-title>-->
       <p>
-        XXXXXXXXX.
+        恒星环宇国际咨询的专家团队在国际税务领域辛勤耕耘二十余载，在广阔的国际视野和规划格局下，在客户价值链的基础上为客户提供支出和收益最透明，合规性最强的解决方案；为个人和企业客户的全球拓展战略拓展提供以税务为基础的增值服务；
+        <br/>最大化满足客户需求，为您量身定制专属于您自身需求的出海税务方案和融资方案；
+        <br/>最有效的对接，直接为您联系到包括境外税务机关人员或银行高级经理在内的核心利益方
+      </p>
+      <img src="../../assets/imgs/咨询通道.png" height="360" width="570"/>
+      <p>
+        <br/>既有211大学教授，也有国际注册会计师。在2012年至2017年国际税务环境波动和税务条约建立的基础上，公司在2018年第一年CRS执行年正式进行境内市场的开拓，将以往在多边跨境税务的工作经验带入到中国新税务体系下的市场，以大格局、广视角、多维度为跨境企业和个人，提供针对性强、实用性高、持久稳定的国际税务筹划方案。
+
+        <br/>知识产权转移初期的法律持有人和经济持有人(beneficial owner and economic owner)，转移过程中涉及的委托研发、转移定价和成本分摊安全规划，转移后的版权/专利费用在缔约国的暂缴税，和可能涉及到兼并企业取得技术专利的资本架构，和兼并过程中涉及到的结构重组，和日后退出时的资本利得税(capital gain)前涉解决方案。
+
+        <br/>股权转移，资本重组，中间层架构股本回流
+
+        <br/>当下对过去的回望是当下可以对未来期望的第一步，恒星国际的税务专业性不仅在于背景知识和行业深度，还在于立足国际环境审视自身在非零和博弈中的姿态和位置，以跨境企业和中国涉税机关的最大利益为业务出发点，以最有效最符合趋势的对接方式为对外交涉协商的基础，以大格局、广视角、多维度为利益方提供针对性强、实用性高、持久稳定的一线税务方案。
+
+        <br/>职能财税
+        <br/>138107*****
+        <br/>谢*****
       </p>
     </ion-card-content>
-    <img src="assets/imgs/taxfree.png"/>
+
   </ion-card>
 
 
